--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,82 @@
 /* Colours */
 /* Typography */
+body {
+  background-color: #121725;
+  font-family: "Chivo", sans-serif;
+  background-image: url("../images/mobile/image-host.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 100vh;
+}
+
+.content {
+  padding-top: 4em;
+}
+
+.header {
+  margin-bottom: 3.2em;
+}
+
+.overlay {
+  background-color: rgba(18, 23, 37, 0.9);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+main h1 {
+  color: #54e6af;
+  font-size: 1.625rem;
+  /* 26px */
+  font-weight: 400;
+  line-height: 38px;
+  text-transform: uppercase;
+}
+
+main h1 span,
+main .instruction {
+  color: #ffffff;
+}
+
+.instruction {
+  line-height: 25px;
+}
+
+.featured-platforms {
+  padding-top: 2.2em;
+  padding-bottom: 3.2em;
+}
+
+.featured-platforms img {
+  width: 100%;
+}
+
+.email,
+.btn-request {
+  /* 2.875em --> 46px */
+  height: calc(2.875em + .75rem + 2px);
+}
+
+.email {
+  background-color: #2c344b;
+  font-size: 0.875em;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+  padding: 0.5625em 2em;
+  outline: none;
+  border: none;
+}
+
+.btn-request {
+  background-color: #54e6af;
+  color: #121725;
+}
+
+.btn-request:hover {
+  background-color: #b3ffe2;
+  color: #121725;
+}
 /*# sourceMappingURL=style.css.map */
