--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,1 +1,79 @@
 @import "variables";
+
+body {
+    background-color: $color-mirage;
+    font-family: $font-stack;
+    background-image: url('../images/mobile/image-host.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    height: 100vh;
+}
+
+.content {
+    padding-top: 4em;    
+}
+
+.header {
+    margin-bottom: 3.2em;
+}
+
+.overlay {
+    background-color: rgba(18, 23, 37, 0.9);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+}
+main h1 {
+    color: $color-turquoise;
+    font-size: 1.625rem; /* 26px */
+    font-weight: 400;
+    line-height: 38px;;
+    text-transform: uppercase;
+}
+
+main h1 span,
+main .instruction {
+    color: $color-white;
+}
+
+.instruction {
+    line-height: 25px;
+}
+
+.featured-platforms {
+    padding-top: 2.2em;
+    padding-bottom: 3.2em;
+}
+
+.featured-platforms img {
+    width: 100%;
+}
+
+.email,
+.btn-request {
+    /* 2.875em --> 46px */
+    height: calc(2.875em + .75rem + 2px);
+}
+
+.email {
+    background-color: $color-martinique;
+    font-size: 0.875em;
+    font-weight: 400;
+    color: $color-form-default-text;
+    padding: 0.5625em 2em;
+    outline: none;
+    border: none;
+}
+
+.btn-request {
+    background-color: $color-turquoise;
+    color: $color-mirage;
+}
+
+.btn-request:hover {
+    background-color: $color-button-hover;
+    color: $color-mirage;
+}
