Extra small and smal devices

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -6,10 +6,11 @@ $color-white: #ffffff;
 $color-waikawa-gray: #5a668a;
 $color-periwinkle-gray: #c2cbe5;
 
-$color-form-default-text: rgba(255,255,255,0.5);
+$color-form-placeholder-text: rgba(255,255,255,0.5);
 $color-form-active-text: rgba(255,255,255,1);
 $color-form-error-text: rgba(251,62,62,1);
 $color-button-hover: rgba(179,255,226,1);
+$color-button-text: rgba(18,23,37,1);
 
 
 /* Typography */
