--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ main h1 .title-emphasis {
   width: 100%;
 }
 
-input[type="text"].email {
+input[type="email"].email {
   outline: none;
   -webkit-box-shadow: none;
           box-shadow: none;
@@ -114,6 +114,17 @@ input[type="text"].email {
 .btn-request {
   /* 2.875em --> 46px */
   height: calc(2.875em + .75rem + 2px);
+}
+
+.email-error {
+  color: #fb3e3e;
+  font-size: 0.75rem;
+  font-weight: bold;
+  padding-left: 1.75rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin-bottom: 0;
+  display: none;
 }
 
 button.btn:active,
