--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,7 +68,7 @@ main h1 .title-emphasis {
     width: 100%;
 }
 
-input[type="text"].email{
+input[type="email"].email{
     outline: none;
     box-shadow: none;
 }
@@ -97,6 +97,17 @@ input[type="text"].email{
 .btn-request {
     /* 2.875em --> 46px */
     height: calc(2.875em + .75rem + 2px);
+}
+
+.email-error {
+    color: $color-form-error-text;
+    font-size: 0.75rem;
+    font-weight: bold;
+    padding-left: 1.75rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0;
+    display: none;
 }
 
 button.btn:active,
@@ -201,7 +212,6 @@ button.btn:active:focus {
         bottom: 0;
     }
 }
-
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
